--- a/index.html
+++ b/index.html
@@ -2,31 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title><?php echo $param['title'] ?>Quickstarter</title>
+    <title>Quickstarter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Construye tu proximo proyecto HTML5 responsive adaptado a tablets y móbiles en minutos - Sistema de Grid HTML5 "  />
      <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
-    <?php /* 
-    <link href='http://fonts.googleapis.com/css?family=RobotoDraft:700,400,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
-    */ ?>
-    <link rel="stylesheet" href="<?php echo $baseUrl . '/css/quickstarter.min.css' ?>" />
-    <?php /* 
-    <link rel="stylesheet" href="<?php echo $baseUrl . '/css/style.css' ?>" />
-    */ ?>
-    <!--[if lt IE 9]> <script src="js/html5shiv.js"></script> <![endif]-->
-    <!--[if lte IE 7]> <link rel="stylesheet" href="css/ie.css" /> <![endif]-->
-    <?php /* 
-    <script src="<?php echo $baseUrl . '/js/jquery-1.8.2.min.js' ?> "            type="text/javascript"></script>
-    <script src="http://balupton.github.com/jquery-syntaxhighlighter/scripts/jquery.syntaxhighlighter.min.js" type="text/javascript"></script>
-    <script src="<?php echo $baseUrl . '/js/jquery.syntaxhighlighter.min.js' ?>" type="text/javascript"></script>
-    <script src="<?php echo $baseUrl . '/js/jquery.dimensions.js' ?>"            type="text/javascript"></script>
-    <script src="<?php echo $baseUrl . '/js/utils.js' ?>"                        type="text/javascript"></script>
-    */ ?>
+    <link rel="stylesheet" href="/css/quickstarter.min.css" />
 </head>
 <body>
 	<div class="jumbotron">
