--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
      <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/quickstarter.min.css" />
+    <link rel="stylesheet" href="http://achavazza.github.io/getquickstarter/css/quickstarter.min.css" />
 </head>
 <body>
 	<div class="jumbotron">
 		<div class="grid">
 			<div class="row">
 				<div class="triad-1">
-					<a href="#" class="btn btn-hollow btn-full uppercase">
+					<a href="https://github.com/achavazza/quickstarter/archive/master.zip" class="btn btn-hollow btn-full uppercase">
 						Descargar .zip
 					</a>
 				</div>
 				<div class="triad-1">
-					<a href="#" class="btn btn-hollow btn-full uppercase">
+					<a href="https://github.com/achavazza/quickstarter" class="btn btn-hollow btn-full uppercase">
 						Descargar source
 					</a>
 				</div>
@@ -56,7 +56,7 @@
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.a
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</div>
 		</div>
 	</div>
