--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 	<div class="jumbotron">
 		<div class="grid">
 			<div class="row">
-				<div class="triad-1">
-					<a href="https://github.com/achavazza/quickstarter/archive/master.zip" class="btn btn-hollow btn-full uppercase">
+				<div class="triad-1 align-center">
+					<a href="https://github.com/achavazza/quickstarter/archive/master.zip" class="btn btn-hollow btn-block uppercase">
 						Descargar .zip
 					</a>
 				</div>
-				<div class="triad-1">
-					<a href="https://github.com/achavazza/quickstarter" class="btn btn-hollow btn-full uppercase">
+				<div class="triad-1 align-center">
+					<a href="https://github.com/achavazza/quickstarter" class="btn btn-hollow btn-block uppercase" target="_blank">
 						Descargar source
 					</a>
 				</div>
-				<div class="triad-1">
-					<a href="#" class="btn btn-hollow btn-full uppercase">
+				<div class="triad-1 align-center">
+					<a href="#" class="btn btn-hollow btn-block uppercase">
 						Ver documentación
 					</a>
 				</div>
