--- a/index.html
+++ b/index.html
@@ -7,26 +7,36 @@
     <meta name="description" content="Construye tu proximo proyecto HTML5 responsive adaptado a tablets y móbiles en minutos - Sistema de Grid HTML5 "  />
      <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="http://achavazza.github.io/getquickstarter/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="http://achavazza.github.io/getquickstarter/css/quickstarter.min.css" />
+    <link rel="stylesheet" href="css/quickstarter.min.css" />
+    <!--<link rel="stylesheet" href="http://achavazza.github.io/getquickstarter/css/quickstarter.min.css" />-->
 </head>
 <body>
 	<div class="jumbotron">
 		<div class="grid">
 			<div class="row">
+				<div class="triad-3">
+					<div class="logo"></div>
+					<h3 class="h3 title align-center">
+						A lightweight Mobile–first, Responsive, & Style–Agnostic CSS Boilerplate/Framework
+					</h3>
+				</div>
+			</div>
+			<div class="row">
 				<div class="triad-1 align-center">
 					<a href="https://github.com/achavazza/quickstarter/archive/master.zip" class="btn btn-hollow btn-block uppercase">
-						Descargar .zip
+						Download .zip
 					</a>
 				</div>
 				<div class="triad-1 align-center">
 					<a href="https://github.com/achavazza/quickstarter" class="btn btn-hollow btn-block uppercase" target="_blank">
-						Descargar source
+						View on Github
 					</a>
 				</div>
 				<div class="triad-1 align-center">
 					<a href="#" class="btn btn-hollow btn-block uppercase">
-						Ver documentación
+						See documentation
 					</a>
 				</div>
 			</div>
