--- a/docs.html
+++ b/docs.html
@@ -27,13 +27,13 @@
             </div>
             <div class="quad-3 align-center align-right-sm">
                 <ul class="flush menu">
-                    <li><a href="/demo.php">Demo</a></li>
-                    <li><a href="/docs.php">Grid</a></li>
-                    <li><a href="/forms.php">Forms</a></li>
-                    <li><a href="/components.php">Components</a></li>
-                    <li><a href="/type.php">Type</a></li>
-                    <li><a href="/tools.php">Tools</a></li>
-                    <li><a class="btn btn-primary" href="/download.php">Download</a></li>
+                    <li><a href="/demo.html">Demo</a></li>
+                    <li><a href="/docs.html">Grid</a></li>
+                    <li><a href="/forms.html">Forms</a></li>
+                    <li><a href="/components.html">Components</a></li>
+                    <li><a href="/type.html">Type</a></li>
+                    <li><a href="/tools.html">Tools</a></li>
+                    <li><a class="btn btn-primary" href="/download.html">Download</a></li>
                 </ul>
             </div>
         </div>
