--- a/forms.html
+++ b/forms.html
@@ -21,19 +21,19 @@
     <div class="grid">
         <div class="row">
             <div class="quad-1 align-center align-left-sm">
-                <a class="logo" href="/">
+                <a class="logo" href="http://achavazza.github.io/getquickstarter/">
                     <img src="img/logo-min.png" alt="Quickstarter" />
                 </a>
             </div>
             <div class="quad-3 align-center align-right-sm">
                 <ul class="flush menu">
-                    <li><a href="getquickstarter/demo.html">Demo</a></li>
-                    <li><a href="getquickstarter/docs.html">Grid</a></li>
-                    <li><a href="getquickstarter/forms.html">Forms</a></li>
-                    <li><a href="getquickstarter/components.html">Components</a></li>
-                    <li><a href="getquickstarter/type.html">Type</a></li>
-                    <li><a href="getquickstarter/tools.html">Tools</a></li>
-                    <li><a class="btn btn-primary" href="getquickstarter/download.html">Download</a></li>
+                    <li><a href="demo.html">Demo</a></li>
+                    <li><a href="docs.html">Grid</a></li>
+                    <li><a href="forms.html">Forms</a></li>
+                    <li><a href="components.html">Components</a></li>
+                    <li><a href="type.html">Type</a></li>
+                    <li><a href="tools.html">Tools</a></li>
+                    <li><a class="btn btn-primary" href="download.html">Download</a></li>
                 </ul>
             </div>
         </div>
