--- a/docs.html
+++ b/docs.html
@@ -113,7 +113,7 @@
                 <blockquote>
                     Most of the time you will not need more than 3 or 4 columns, but in case you needed, you can change the .less file allowing you to define any <b>className</b> and <b>columns</b> you want
                 </blockquote>
-                <a class="btn btn-primary" target="_blank" href="#">See full standalone example</a>
+                <a class="btn btn-primary" target="_blank" href="demo.html">See full standalone example</a>
                 <br />
                 <br />
 
@@ -229,7 +229,7 @@
             <p>
                 Ignores widths and sets a fluid grid along the wrapper will not work inside a traditional <code>.grid</code>
             </p>
-            <a class="btn btn-primary" target="_blank" href="#">See full standalone example</a>
+            <a class="btn btn-primary" target="_blank" href="demo-fluid">See full standalone example</a>
             </section>
 
             <section id="grid-centered">
