--- a/demo-fluid.html
+++ b/demo-fluid.html
@@ -17,7 +17,7 @@
     
     </head>
 <body>
-<section class="section grid">
+<section class="section grid grid-snap">
 	<h2 class="h1 title">Quads</h2>
     <div class="row">
         <div class="quad-1">
@@ -148,7 +148,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Anidado</h2>
     <div class="row">
         <div class="quad-4">
@@ -205,7 +205,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Visible only</h2>
     <div class="row">
         <div class="quad-4">
@@ -254,7 +254,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Invisible only</h2>
     <div class="row">
         <div class="quad-4">
@@ -303,7 +303,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Visible From</h2>
     <div class="row">
         <div class="quad-4">
@@ -352,7 +352,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Invisible From</h2>
     <div class="row">
         <div class="quad-4">
@@ -401,7 +401,7 @@
         </div>
     </div>
 </section>
-<section class="section grid">
+<section class="section grid grid-snap">
     <h2 class="h1 title">Mutate</h2>
     <div class="row">
         <div class="quad-4 quad-2-md">
