--- a/docs.html
+++ b/docs.html
@@ -203,6 +203,7 @@
             <p>
                 It wil ignore the gutter between <code>quads</code> can be applied on <code>.grid</code> as <code>.grid-snap</code> or on <code>.row</code> as <code>.row-snap</code>
             </p>
+            <a class="btn btn-primary" target="_blank" href="demo-snap">See full standalone example</a>
 
 <div class="example">
 <div class="samp">
