--- a/docs.html
+++ b/docs.html
@@ -203,7 +203,7 @@
             <p>
                 It wil ignore the gutter between <code>quads</code> can be applied on <code>.grid</code> as <code>.grid-snap</code> or on <code>.row</code> as <code>.row-snap</code>
             </p>
-            <a class="btn btn-primary" target="_blank" href="demo-snap">See full standalone example</a>
+            <a class="btn btn-primary" target="_blank" href="demo-snap.html">See full standalone example</a>
 
 <div class="example">
 <div class="samp">
@@ -230,7 +230,7 @@
             <p>
                 Ignores widths and sets a fluid grid along the wrapper will not work inside a traditional <code>.grid</code>
             </p>
-            <a class="btn btn-primary" target="_blank" href="demo-fluid">See full standalone example</a>
+            <a class="btn btn-primary" target="_blank" href="demo-fluid.html">See full standalone example</a>
             </section>
 
             <section id="grid-centered">
