--- a/components.html
+++ b/components.html
@@ -21,7 +21,7 @@
     <div class="grid">
         <div class="row">
             <div class="quad-1 align-center align-left-sm">
-                <a class="logo" href="/">
+                <a class="logo" href="http://achavazza.github.io/getquickstarter/">
                     <img src="img/logo-min.png" alt="Quickstarter" />
                 </a>
             </div>
