--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             </div>
             <div class="triad-1 align-center">
                 <a href="https://github.com/achavazza/quickstarter" class="btn btn-hollow btn-block uppercase" target="_blank">
-                    View on Github
+                    View it on Github
                 </a>
             </div>
             <div class="triad-1 align-center">
-                <a href="/docs.php" class="btn btn-hollow btn-block uppercase">
-                    See documentation
+                <a href="docs.html" class="btn btn-hollow btn-block uppercase">
+                    See full documentation
                 </a>
             </div>
         </div>
