--- a/demo-snap.html
+++ b/demo-snap.html
@@ -17,6 +17,28 @@
     
     </head>
 <body>
+<div id="header">
+    <div class="grid">
+        <div class="row">
+            <div class="quad-1 align-center align-left-sm">
+                <a class="logo" href="http://achavazza.github.io/getquickstarter/">
+                    <img src="img/logo-min.png" alt="Quickstarter" />
+                </a>
+            </div>
+            <div class="quad-3 align-center align-right-sm">
+                <ul class="flush menu">
+                    <li><a href="demo.html">Demo</a></li>
+                    <li><a href="docs.html">Grid</a></li>
+                    <li><a href="forms.html">Forms</a></li>
+                    <li><a href="components.html">Components</a></li>
+                    <li><a href="type.html">Type</a></li>
+                    <li><a href="tools.html">Tools</a></li>
+                    <li><a class="btn btn-primary" href="download.html">Download</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 <section class="section grid-fluid">
 	<h2 class="h1 title">Quads</h2>
     <div class="row">
