--- a/demo.html
+++ b/demo.html
@@ -171,7 +171,7 @@
     </div>
 </section>
 <section class="section grid">
-    <h2 class="h1 title">Anidado</h2>
+    <h2 class="h1 title">Nesting</h2>
     <div class="row">
         <div class="quad-4">
             <div class="nest">
