--- a/demo-snap.html
+++ b/demo-snap.html
@@ -174,13 +174,13 @@
     <h2 class="h1 title">Nesting</h2>
     <div class="row">
         <div class="quad-4">
-            <div class="nest">
+            <div class="nesting">
                 <span class="bg-grid">
                     .quad-4
                 </span>
                 <div class="row">
                     <div class="quad-2">
-                        <div class="nest">
+                        <div class="nesting">
                             <span class="bg-grid">
                                 .quad-2
                             </span>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="quad-2">
-                        <div class="nest">
+                        <div class="nesting">
                             <span class="bg-grid">
                                 .quad-2
                             </span>
